--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "server": "npm run watch --prefix server",
     "client": "npm start --prefix client",
+    "build-client": "npm run build --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npm run client & npm run server"
+    "watch": "npm run client & npm run server",
+    "deploy": "npm run build-client && npm run server"
   },
   "keywords": [],
   "author": "",
