--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "csv-parse": "^5.5.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
+    "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.9"
   }
 }
