--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon src/server.ts",
@@ -25,6 +26,7 @@
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/morgan": "^1.9.7",
-    "@types/node": "^20.8.9"
+    "@types/node": "^20.8.9",
+    "babel-plugin-transform-import-meta": "^2.2.1"
   }
 }
