--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,7 @@
     "dist",
     "__tests__",
     "node_modules",
-    "jest.config.ts"
+    "_jest.config.ts"
   ],
   "include": [
     "**/*.ts", 
