--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/esm": "^3.2.1",
     "@types/jest": "^29.5.6",
     "@types/supertest": "^2.0.15",
     "babel-plugin-transform-import-meta": "^2.2.1",
