--- a/performance/tsconfig.json
+++ b/performance/tsconfig.json
@@ -20,7 +20,6 @@
         "target": "ESNext",
         "module": "ESNext",
         "moduleResolution": "Node",
-        "types": ["jest"]
       },
     },
     //compilerOptions only used by tsc(for build) ignored by ts-node
@@ -30,12 +29,12 @@
       "moduleResolution": "Node",                       
       // "declaration": true,                         /* Generates corresponding '.d.ts' file. */ 
       "outDir": "./dist",                             /* Redirect output structure to the directory. */
-      // "outFile": "server.js",
+      // "outFile": "server.mjs",
       "strict": true,                                 /* Enable all strict type-checking options. */
       "strictPropertyInitialization": false,          /* Enable strict checking of property initialization in classes. */
       "strictNullChecks": true,                       /* Enable strict null checks. */
       "lib": ["ESNext","dom"],                        /* Specify library files to be included in the compilation. */
-      "allowSyntheticDefaultImports": true,
+      // "allowSyntheticDefaultImports": true,
       "esModuleInterop": true,
       // "noEmit": true,
       "composite": true,
@@ -45,12 +44,10 @@
     "dist",
     "__tests__",
     "node_modules",
-    "jest.config.ts"
+    "_jest.config.ts"
   ],
   "include": [
     "**/*.ts", 
   ],
-
-
-
+  
 }
