--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon src/server.ts",
-    "start": "set PORT=5000&& ts-node src/server.ts"
+    "start": "set PORT=5000&& ts-node src/server.ts",
+    "cluster": "pm2 start dist/src/server.js -i max"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +18,11 @@
     "csv-parse": "^5.5.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
+    "pm2": "^5.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
