--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "watch": "npm run client & npm run server",
     "deploy": "npm run build-client && npm run server",
     "deploy-cluster": "npm run build-client && npm run cluster --prefix server",
-    "test": "jest",
+    "test": "jest --setupFiles dotenv/config",
     "test-watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  
   "devDependencies": {
     "@types/esm": "^3.2.1",
     "@types/jest": "^29.5.6",
@@ -27,5 +26,8 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
