--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch": "npm run client & npm run server",
     "deploy": "npm run build-client && npm run server",
     "deploy-cluster": "npm run build-client && npm run cluster --prefix server",
-    "test": "jest --setupFiles dotenv/config",
+    "test": "jest",
     "test-watch": "jest --watch"
   },
   "keywords": [],
