--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -5,6 +5,12 @@ on:
   pull_request:
     branches: [ master ]
 jobs: 
+  env:
+    CI: true
+    # PORT: 5000
+  strategy :
+    matrix:
+      node-version: [14.x, 16.x, 18.x, 20.x]
   build:
     runs-on: ubuntu-latest
     # strategy:
@@ -15,8 +21,10 @@ jobs:
       - name: Use Node.js version 18
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          # test with all node versions in the matrix
+          node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm run build --prefix client
+      - run: npm test
 
     
