--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -5,14 +5,15 @@ on:
   pull_request:
     branches: [ master ]
 jobs: 
-
   build:
     env:
       CI: true
+      MONGO_URL: mongodb://localhost:27017/nasa
       # PORT: 5000
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x, 20.x]
+        node-version: [16.x, 18.x, 20.x]
+        mongodb-version: ['6.3']
     runs-on: ubuntu-latest
     # strategy:
     #   matrix:
@@ -24,6 +25,10 @@ jobs:
         with:
           # test with all node versions in the matrix
           node-version: ${{ matrix.node-version }}
+      - name: Use MongoDb from Github actions
+        uses: supercharge/mongodb-github-action@1.10.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
       - run: npm install
       - run: npm run build --prefix client
       - run: npm test
