update version number of mongodb in workflow

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -12,8 +12,8 @@ jobs:
       # PORT: 5000
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
-        mongodb-version: ['6.3.0']
+        node-version: [18.x, 20.x]
+        mongodb-version: ['6.0']
     runs-on: ubuntu-latest
     # strategy:
     #   matrix:
