--- a/package.json
+++ b/package.json
@@ -14,21 +14,27 @@
     "watch": "npm run client & npm run server",
     "deploy": "npm run build-client && npm run server",
     "deploy-cluster": "npm run build-client && npm run cluster --prefix server",
-    "test": "jest",
+    "test": "vitest",
     "test-watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/esm": "^3.2.1",
     "@types/jest": "^29.5.6",
     "@types/supertest": "^2.0.15",
+    "babel-jest": "^29.7.0",
     "babel-plugin-transform-import-meta": "^2.2.1",
+    "babel-plugin-transform-vite-meta-env": "^1.0.3",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "vitest": "^1.1.0"
   },
   "dependencies": {
     "dotenv": "^16.3.1"
