--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "cross-env": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "cross-env BUILD_PATH=../server/public&& react-scripts build",
+    "build": "react-scripts build && cp -r build ../server/public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -35,8 +36,5 @@
   },
   "overrides": {
     "nth-check@1.0.2": "2.0.1"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3"
   }
 }
