--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon src/server.ts",
-    "start": "set PORT=5000&& ts-node src/server.ts",
+    "start": "ts-node src/server.ts",
     "cluster": "pm2 start dist/src/server.js -i max"
   },
   "keywords": [],
@@ -26,13 +26,14 @@
     "nodemon": "^3.0.1",
     "pm2": "^5.3.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@types/node": "^20.8.9"
   },
   "devDependencies": {
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/morgan": "^1.9.7",
-    "@types/node": "^20.8.9",
+
     "babel-plugin-transform-import-meta": "^2.2.1"
   }
 }
